k8s-manifests/base/product-inventory.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-inventory
  labels:
    app: product-inventory
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product-inventory
  template:
    metadata:
      labels:
        app: product-inventory
        version: v1
    spec:
      containers:
      - name: product-inventory
        image: 794038226274.dkr.ecr.us-east-1.amazonaws.com/ecommerce/product-inventory:v1.0.0
        ports:
        - containerPort: 3002
          name: http
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "200m"
---
apiVersion: v1
kind: Service
metadata:
  name: product-inventory
  labels:
    app: product-inventory
spec:
  ports:
  - port: 3002
    targetPort: 3002
    name: http
  selector:
    app: product-inventory
